--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,161 @@
 ---
+import { sanityClient } from "sanity:client";
+import Layout from '../layouts/Layout.astro';
+import Card from '../components/Card.astro';
+import Searchbox from '../components/Searchbox.astro';
+import QuickLinks from '../components/QuickLinks.astro'; 
+import Carousel from '../components/Carousel.astro';
+import LibraryHours from '../components/LibraryHours.astro';
+import Localist from '../components/Localist.astro';
+import CrowdIndex from '../components/CrowdIndex.astro';
+
+export const prerender = false;
+
+const posts = await sanityClient.fetch(
+`*[_type == "post" && defined(date)] | order(date desc)`,
+)
 
 ---
+<Layout title="Welcome to Miami University Libraries">
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1 class="text-3xl font-bold underline bg-red-400">Hello world!</h1>
-  </body>
-</html>
+<main class="home container-fluid px-4">
+  
+
+  <div class="row d-flex px-0">
+    <!-- Hours Box -->
+    <div class="col-12 col-lg-4 align-items-center px-5 pt-4">
+    <CrowdIndex/>
+        <LibraryHours />
+    
+      </div>
+    
+
+    <div class="col-12 col-lg-8 ps-3 pe-5 align-items-center">
+
+        <Searchbox />
+
+        <QuickLinks />
+
+
+        
+    </div>
+  </div>
+
+<div class="row d-flex px-0">
+
+     
+
+        <div class="col-12 col-lg-12 ps-3 pe-5 align-items-center">
+
+<Carousel />
+
+          
+
+        </div>
+</div>
+  <!-- Mid part of homepage, contains three columns -->
+
+  <div class="container-fluid">
+    <div class="row">
+
+ <div class="col-lg-4 col-md-4 col-sm-12 mx-auto" id="homepageCalendar">
+    
+       <Localist />
+    
+      </div>
+
+      
+      <div class="col-lg-8 col-md-8 col-sm-12 bg-lesswhite">
+        
+       <h1 class="h1Homepage">News Spotlight</h1>
+           
+    <ul role="list" class="link-card-grid">
+        {
+        posts.map((post: any) => (
+            <Card href={'/posts/' + post.slug.current} title={post.title} body={post.excerpt} />
+        ))
+        }
+    </ul>
+
+      </div>
+
+    </div>
+  </div>
+
+  <!-- LibChat proactive chat -->
+<div id="libchat_48597dfc1078556815ee78d6e99e7a7b"></div>
+<script is:inline type="text/javascript" src="https://v2.libanswers.com/load_chat.php?hash=48597dfc1078556815ee78d6e99e7a7b"></script>
+
+          
+
+	</main>
+</Layout>
+
+
+
+<style>
+	:root {
+		--astro-gradient: linear-gradient(0deg, #4f39fa, #da62c4);
+	}
+
+	h1 {
+		font-size: 3em;
+		margin: 2rem 0 1rem 0;
+	}
+
+	main {
+		margin: auto;
+		padding: 1em;
+	}
+
+	.text-gradient {
+		font-weight: 900;
+		background-image: var(--astro-gradient);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		background-size: 100% 200%;
+		background-position-y: 100%;
+		border-radius: 0.4rem;
+		animation: pulse 4s ease-in-out infinite;
+	}
+
+	@keyframes pulse {
+		0%,
+		100% {
+			background-position-y: 0%;
+		}
+		50% {
+			background-position-y: 80%;
+		}
+	}
+
+	.instructions {
+		line-height: 1.6;
+		margin: 1rem 0;
+		background: #4f39fa;
+		padding: 1rem;
+		border-radius: 0.4rem;
+		color: var(--color-bg);
+	}
+
+	.instructions code {
+		font-size: 0.875em;
+		border: 0.1em solid var(--color-border);
+		border-radius: 4px;
+		padding: 0.15em 0.25em;
+	}
+
+	.link-card-grid {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+		gap: 1rem;
+		padding: 0;
+	}
+
+	.latest-posts {
+		border: 0.15em solid var(--color-border);
+		border-radius: 0.4rem;
+		padding: 1em 2em;
+		background-color: white;
+	}
+</style>
