--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,124 +1,147 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import { Header } from "../components/Header";
+import Footer  from "../components/Footer";
+import "../assets/header.css";
 export const prerender = true;
-export interface Props { title: string; }
+export interface Props {
+  title: string;
+}
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
 
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
 
-		<script is:inline src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>   
-		<script is:inline src="//code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-   		<script is:inline src="/src/scripts/library.js"></script>
-   
-	   <!-- D3 -->
-	   <script is:inline src="https://d3js.org/d3.v7.js"></script>
-   
-	   <!-- Axios -->
-	   <script is:inline src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script
+      is:inline
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    ></script>
+    <script is:inline src="//code.jquery.com/ui/1.13.2/jquery-ui.min.js"
+    ></script>
+    <script is:inline src="/src/scripts/library.js"></script>
 
-	</head>
+    <!-- D3 -->
+    <script is:inline src="https://d3js.org/d3.v7.js"></script>
 
-	<body>
-		<Navigation />
-		<slot />
+    <!-- Axios -->
+    <script is:inline src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  </head>
 
+  <body>
+    <Header client:only="react" />
+    <slot />
 
- 		<script is:inline src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
-
-
-
-	</body>
+    <script
+      is:inline
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+      <Footer/>
+  </body>
 </html>
 
-
-
 <style>
- #libchat_a184aaf0aaab779e6cc4ac225df55a42 .lci_chat_load {
-              width: 100%!important;
-            }
-
-
-/*--- Ask Us chat button ---*/
- .lcs_slide_out {
-  /* margin-top: 25%; */
-}
-
-.lcs_slide_out-r{
-  top: 40% !important;
-}
-
-.lcs_slide_out header a {
-  @include font-size(1.35rem !important);
-  font-weight: 400;
-  padding: 0.125em 1em!important;
-}
-@media only screen and (max-width: 576px) {
-  .lcs_slide_out header a {
-    @include font-size(1rem !important);
+  #libchat_a184aaf0aaab779e6cc4ac225df55a42 .lci_chat_load {
+    width: 100% !important;
   }
-}
 
+  /*--- Ask Us chat button ---*/
+  .lcs_slide_out {
+    /* margin-top: 25%; */
+  }
 
-.lcs_slide_out.open header a {
-  padding: 0 0.5em!important;
-}
+  .lcs_slide_out-r {
+    top: 40% !important;
+  }
 
-.lcs_slide_out.open header a:before { 
-  content:'\00D7\00a0\00a0\00a0'; 
-  font-size: 1.25em;
-}
+  .lcs_slide_out header a {
+    @include font-size(1.35rem !important);
+    font-weight: 400;
+    padding: 0.125em 1em !important;
+  }
+  @media only screen and (max-width: 576px) {
+    .lcs_slide_out header a {
+      @include font-size(1rem !important);
+    }
+  }
 
-#s-lch-header-actions button i.fa.fa-fw {
-  font-size: 24px;
-}
+  .lcs_slide_out.open header a {
+    padding: 0 0.5em !important;
+  }
 
+  .lcs_slide_out.open header a:before {
+    content: "\00D7\00a0\00a0\00a0";
+    font-size: 1.25em;
+  }
 
+  #s-lch-header-actions button i.fa.fa-fw {
+    font-size: 24px;
+  }
 
+  :root {
+    --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
+    --font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
+    --font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
 
-	:root {
-		--font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-		--font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
-		--font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
+    --color-text: hsl(12, 5%, 4%);
+    --color-bg: hsl(10, 21%, 95%);
+    --color-border: hsl(17, 24%, 90%);
+  }
 
-		--color-text: hsl(12, 5%, 4%);
-		--color-bg: hsl(10, 21%, 95%);
-		--color-border: hsl(17, 24%, 90%);
-	}
+  html {
+    font-family: system-ui, sans-serif;
+    font-size: var(--font-size-base);
+    color: var(--color-text);
+    background-color: var(--color-bg);
+  }
 
-	html {
-		font-family: system-ui, sans-serif;
-		font-size: var(--font-size-base);
-		color: var(--color-text);
-		background-color: var(--color-bg);
-	}
+  body {
+    margin: 0;
+  }
 
-	body {
-		margin: 0;
-	}
+  a {
+    color: rgb(153 27 27);
+    text-decoration: underline;
+  }
 
-	:global(h1) {
-		font-size: var(--font-size-xl);
-	}
+  a:hover {
+    color: rgb(185 28 28);
+  }
 
-	:global(h2) {
-		font-size: var(--font-size-lg);
-	}
+  h1 {
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+  }
 
-	:global(code) {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
+  :global(h1) {
+    font-size: var(--font-size-xl);
+  }
+
+  :global(h2) {
+    font-size: var(--font-size-lg);
+  }
+
+  :global(code) {
+    font-family:
+      Menlo,
+      Monaco,
+      Lucida Console,
+      Liberation Mono,
+      DejaVu Sans Mono,
+      Bitstream Vera Sans Mono,
+      Courier New,
+      monospace;
+  }
 </style>
-
